Fix issue's button not showing up after a hide

--- a/main.css
+++ b/main.css
@@ -536,3 +536,122 @@ a.link.pull_link {
     color: #5959c3;
     cursor: pointer;
 }
+
+.admin_view{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.admin_view > div{
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    position: absolute;
+    margin-top: 8%;
+    padding: 40px;
+}
+
+.table-stats {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
+
+.table-stats .tbl-header {
+    background-color: #100a0ec7;
+    height: 60px;
+    font-size: 22px;
+}
+
+.table-stats th {
+    background-color: #00000078;
+    color: white;
+    height: 33px;
+}
+
+.table-stats th, .table-stats td {
+    border: 2px solid #fff3f3;
+    font-size: 16px;
+    font-weight: bolder;
+    font-family: revert;
+}
+
+table.table-stats.am {
+    margin-bottom: 4%;
+}
+
+.txt-stats {
+    font-size: 17px;
+    font-weight: 600;
+    font-family: system-ui;
+    margin-bottom: 25px;
+    margin-left: 25%;
+}
+
+.txt-stats button, .txt-stats span {
+    padding: 6px 50px;
+    border-radius: 20px;
+    border: none;
+    background-color: #feb16e;
+    font-weight: bold;
+    margin-left: 20px;
+    color: #444444;
+}
+
+.table-stats td {
+    height: 45px;
+    background-color: #b4c6f8;
+}
+
+.search-bar {
+    height: 75px;
+    background-color: #b5c2e0;
+    border-bottom: 8px solid #677189;
+    text-align: center;
+    padding-top: 18px;
+}
+
+.search-bar input {
+    width: 35%;
+    height: 29px;
+    border: none;
+    border-radius: 25px;
+    padding-left: 19px;
+    text-align: center;
+}
+
+.search-bar input::placeholder{
+    font-size: 11px;
+}
+
+.search-bar select {
+    width: 20%;
+    height: 30px;
+    border-radius: 23px;
+    text-align: center;
+    border: none;
+    margin-right: 4%;
+    font-family: monospace;
+}
+
+.search-bar button {
+    padding: 5px 30px;
+    border-radius: 10px;
+    border: none;
+    height: 80%;
+    background-color: #677189;
+    color: white;
+}
+
+
+select,input:focus {
+    outline: none;
+}
+
+
+
+
+
+
+
